# alsa_be

./: CMakeLists.txt  README.md  doxygen.cfg
include/: AlsaBackend.hpp  BEAudio.hpp  BEBase.hpp  BackendBase.hpp  ChannelBase.hpp  CustomRingBuffer.hpp  FEHandlerBase.hpp  FrontendHandlerBase.hpp  RingBuffer.hpp  XenStore.hpp
src/: AlsaBackend.cpp  AlsaBackend.hpp  BEBase.cpp  BackendBase.cpp  ChannelBase.cpp  CommandHandler.cpp  CommandHandler.hpp  FEHandlerBase.cpp  FrontendHandlerBase.cpp  RingBuffer.cpp  XenStore.cpp  alsa_be.cpp  audio_be.cpp
src/alsa/: AlsaPcm.cpp  AlsaPcm.hpp
src/xen/: BackendBase.cpp  BackendBase.hpp  CustomRingBuffer.hpp  DataChannel.cpp  DataChannel.hpp  DataChannelBase.cpp  DataChannelBase.hpp  EventChannel.cpp  EventChannel.hpp  FrontendHandlerBase.cpp  FrontendHandlerBase.hpp  Log.cpp  Log.hpp  RingBuffer.cpp  RingBuffer.hpp  RingBufferBase.hpp  Utils.cpp  Utils.hpp  XenCtrl.cpp  XenCtrl.hpp  XenEvtchn.cpp  XenEvtchn.hpp  XenException.hpp  XenGnttab.cpp  XenGnttab.hpp  XenStat.cpp  XenStat.hpp  XenStore.cpp  XenStore.hpp
